--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/react-credit-cards": "^0.8.1",
+    "canvas-confetti": "^1.6.0",
     "jest": "^29.0.2",
     "jest-environment-jsdom": "^29.0.2",
     "md5": "^2.3.0",
@@ -44,6 +45,7 @@
     "@storybook/manager-webpack5": "^6.5.10",
     "@storybook/react": "^6.5.10",
     "@storybook/testing-library": "^0.0.13",
+    "@types/canvas-confetti": "^1.6.1",
     "@types/md5": "^2.3.2",
     "@types/node": "18.7.5",
     "@types/react": "18.0.17",
